force-app/main/default/objects/Agreement_History__c/Agreement_History__c.object-meta.xml
<CustomObject>
    <label>Agreement History</label>
    <nameField>
        <label>Agreement History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>