force-app/main/default/objects/Agreement_History__c/fields/API_Field__c.field-meta.xml
<CustomField>
    <fullName>API_Field__c</fullName>
    <label>API Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>