force-app/main/default/objects/Agreement_History__c/fields/Date_Pushed__c.field-meta.xml
<CustomField>
    <fullName>Date_Pushed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date Pushed</label>
    <type>Checkbox</type>
</CustomField>