force-app/main/default/objects/Agreement_History__c/fields/Date_Variance__c.field-meta.xml
<CustomField>
    <fullName>Date_Variance__c</fullName>
    <formula>DATE(

/* Year Logic */
VALUE(RIGHT(New_Value__c , 4))
,

/* Month Logic */
VALUE(LEFT(New_Value__c ,
FIND(&quot;/&quot;,New_Value__c ) - 1))
,

/* Day Logic */
VALUE(MID(New_Value__c ,
FIND(&quot;/&quot;,New_Value__c ) + 1,
FIND(&quot;/&quot;,New_Value__c , FIND(&quot;/&quot;,New_Value__c ) + 1) -
FIND(&quot;/&quot;,New_Value__c ) - 1
))

)
-
DATE(

/* Year Logic */
VALUE(RIGHT(Old_Value__c , 4))
,

/* Month Logic */
VALUE(LEFT(Old_Value__c ,
FIND(&quot;/&quot;,Old_Value__c ) - 1))
,

/* Day Logic */
VALUE(MID(Old_Value__c ,
FIND(&quot;/&quot;,Old_Value__c ) + 1,
FIND(&quot;/&quot;,Old_Value__c , FIND(&quot;/&quot;,Old_Value__c ) + 1) -
FIND(&quot;/&quot;,Old_Value__c ) - 1
))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>