force-app/main/default/objects/Agreement_History__c/fields/Modified_Last_24_Hours__c.field-meta.xml
<CustomField>
    <fullName>Modified_Last_24_Hours__c</fullName>
    <formula>IF ((FLOOR ((NOW() - ($System.OriginDateTime)) * 24) / 24) -
(CreatedDate - ($System.OriginDateTime)) &lt; 1, &quot;TRUE&quot;, &quot;FALSE&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified Last 24 Hours</label>
    <type>Text</type>
</CustomField>