force-app/main/default/objects/Agreement_History__c/fields/Modify_Date__c.field-meta.xml
<CustomField>
    <fullName>Modify_Date__c</fullName>
    <label>Modify Date</label>
    <type>DateTime</type>
</CustomField>