force-app/main/default/objects/Agreement_History__c/fields/Remote_Org_User__c.field-meta.xml
<CustomField>
    <fullName>Remote_Org_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remote Org User</label>
    <referenceTo>strk__Remote_Org_User__c</referenceTo>
    <relationshipLabel>Agreement History</relationshipLabel>
    <relationshipName>Agreement_History</relationshipName>
    <type>Lookup</type>
</CustomField>